feat: atualiza o status do pedido
